NXP-32535: Add a new HTTP client for tests